--- a/first-app/src/index.html
+++ b/first-app/src/index.html
@@ -6,6 +6,18 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://unpkg.com/systemjs/dist/system.js"></script>
+  <script>
+    SystemJS.config({
+      baseURL:'/module',
+      transpiler:'plugin-babel',
+      map:{
+          'plugin-babel':'https://unpkg.com/systemjs-plugin-babel/plugin-babel.js',
+          'systemjs-babel-build':'https://unpkg.com/systemjs-plugin-babel/systemjs-babel-browser.js'
+      }
+    });
+    SystemJS.import('main.js');
+  </script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
